test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET__api_private_ipinfo_4.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 01 Apr 2025 17:41:25 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="VeijR7W3SWudD62N3BPlisUVF13ypWNC", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}